Добавлена схема ошибок для 4хх и 5хх
